--- a/notebooks/adaptive_rag.ipynb
+++ b/notebooks/adaptive_rag.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -71,6 +71,7 @@
     "embed_model = os.getenv(\"EMBED_MODEL\")\n",
     "model= os.getenv(\"MODEL\")\n",
     "organization = os.getenv(\"ORGANIZATION\")\n",
+    "tavily_api_key = os.getenv(\"TAVILY_API_KEY\")\n",
     "\n",
     "print(api_key)\n",
     "\n",
@@ -89,7 +90,7 @@
     "\n",
     "### Search\n",
     "import os\n",
-    "os.environ[\"TAVILY_API_KEY\"] = \"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\"\n",
+    "os.environ[\"TAVILY_API_KEY\"] = \"\"\n",
     "web_search_tool = TavilySearchResults(k=3)"
    ]
   },
