--- a/notebooks/customer_support_bot.ipynb
+++ b/notebooks/customer_support_bot.ipynb
@@ -77,6 +77,7 @@
     "organization = os.getenv(\"ORGANIZATION\")\n",
     "anthropic_api_key = os.getenv(\"ANTHROPIC_API_KEY\")\n",
     "anthropic_model = os.getenv(\"MODEL_NAME\")\n",
+    "tavily_api_key = os.getenv(\"TAVILY_API_KEY\")\n",
     "\n",
     "print(api_key)\n",
     "print(anthropic_api_key)\n",
@@ -102,7 +103,7 @@
     ")\n",
     "\n",
     "import os\n",
-    "os.environ[\"TAVILY_API_KEY\"] = \"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\"\n",
+    "os.environ[\"TAVILY_API_KEY\"] = \"\"\n",
     "web_search_tool = TavilySearchResults(k=3)"
    ]
   },
