--- a/notebooks/multi_agent_researcher.ipynb
+++ b/notebooks/multi_agent_researcher.ipynb
@@ -58,6 +58,7 @@
     "embed_model = os.getenv(\"EMBED_MODEL\")\n",
     "model= os.getenv(\"MODEL\")\n",
     "organization = os.getenv(\"ORGANIZATION\")\n",
+    "tavily_api_key = os.getenv(\"TAVILY_API_KEY\")\n",
     "\n",
     "print(api_key)\n",
     "\n",
@@ -76,7 +77,7 @@
     "\n",
     "### Search\n",
     "import os\n",
-    "os.environ[\"TAVILY_API_KEY\"] = \"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\"\n",
+    "os.environ[\"TAVILY_API_KEY\"] = \"\"\n",
     "web_search_tool = TavilySearchResults(k=3)"
    ]
   },
