fix: env variables and code cleanup

--- a/notebooks/adaptive_rag.ipynb
+++ b/notebooks/adaptive_rag.ipynb
@@ -44,16 +44,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "import os\n",
-    "\n",
     "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "os.environ[\"LANGCHAIN_API_KEY\"] = \"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\""
+    "langchain_api_key = os.getenv(\"LANGCHAIN_API_KEY\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -90,13 +87,12 @@
     "\n",
     "### Search\n",
     "import os\n",
-    "os.environ[\"TAVILY_API_KEY\"] = \"\"\n",
     "web_search_tool = TavilySearchResults(k=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -180,18 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'retriever' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 28\u001b[0m\n\u001b[0;32m     26\u001b[0m retrieval_grader \u001b[38;5;241m=\u001b[39m grade_prompt \u001b[38;5;241m|\u001b[39m structured_llm_grader\n\u001b[0;32m     27\u001b[0m question \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124magent memory\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m---> 28\u001b[0m docs \u001b[38;5;241m=\u001b[39m \u001b[43mretriever\u001b[49m\u001b[38;5;241m.\u001b[39minvoke(question)\n\u001b[0;32m     29\u001b[0m doc_txt \u001b[38;5;241m=\u001b[39m docs[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mpage_content\n\u001b[0;32m     30\u001b[0m \u001b[38;5;28mprint\u001b[39m(retrieval_grader\u001b[38;5;241m.\u001b[39minvoke({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mquestion\u001b[39m\u001b[38;5;124m\"\u001b[39m: question, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdocument\u001b[39m\u001b[38;5;124m\"\u001b[39m: doc_txt}))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'retriever' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "binary_score='no'\n"
      ]
     }
    ],
@@ -230,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +237,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Agent memory in LLM-powered systems consists of two types: short-term memory, which involves in-context learning for immediate tasks, and long-term memory, which allows the agent to retain and recall information over extended periods using external storage and retrieval mechanisms. Long-term memory is often structured as a memory stream, recording experiences in natural language, and is surfaced based on relevance, recency, and importance. This memory enables agents to learn from past experiences and guide future behavior effectively.\n"
+      "Agent memory includes short-term memory for in-context learning and long-term memory for retaining and recalling information over extended periods. Long-term memory often leverages an external vector store for fast retrieval. Memory is a crucial component in autonomous agents, allowing them to learn from past experiences and improve their decision-making processes.\n"
      ]
     }
    ],
@@ -272,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +273,7 @@
        "GradeHallucinations(binary_score='yes')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +316,7 @@
        "GradeAnswer(binary_score='yes')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,16 +350,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'What is the concept of agent memory, and how is it utilized or implemented in various systems?'"
+       "\"What is the role of memory in an agent's functioning?\""
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -700,8 +692,10 @@
       "---DECISION: GENERATION ADDRESSES QUESTION---\n",
       "\"Node 'generate':\"\n",
       "'\\n---\\n'\n",
-      "('The Chicago Bears were expected to draft USC quarterback Caleb Williams with '\n",
-      " 'the No. 1 overall pick in the 2024 NFL Draft.')\n"
+      "('Caleb Williams from USC was expected to be the first player drafted by the '\n",
+      " 'Bears in the 2024 NFL draft. He was selected as the No. 1 overall pick by '\n",
+      " 'the Chicago Bears. Williams was widely regarded as the top prospect in a '\n",
+      " 'draft class filled with talented quarterbacks.')\n"
      ]
     }
    ],
@@ -726,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -739,9 +733,9 @@
       "\"Node 'retrieve':\"\n",
       "'\\n---\\n'\n",
       "---CHECK DOCUMENT RELEVANCE TO QUESTION---\n",
+      "---GRADE: DOCUMENT RELEVANT---\n",
+      "---GRADE: DOCUMENT RELEVANT---\n",
       "---GRADE: DOCUMENT NOT RELEVANT---\n",
-      "---GRADE: DOCUMENT RELEVANT---\n",
-      "---GRADE: DOCUMENT RELEVANT---\n",
       "---GRADE: DOCUMENT RELEVANT---\n",
       "---ASSESS GRADED DOCUMENTS---\n",
       "---DECISION: GENERATE---\n",
@@ -754,10 +748,13 @@
       "---DECISION: GENERATION ADDRESSES QUESTION---\n",
       "\"Node 'generate':\"\n",
       "'\\n---\\n'\n",
-      "('The types of agent memory are short-term memory, which involves in-context '\n",
-      " \"learning within the model's finite context window, and long-term memory, \"\n",
-      " 'which uses external vector stores for retaining and retrieving information '\n",
-      " 'over extended periods.')\n"
+      "('The types of agent memory are short-term memory, which is utilized for '\n",
+      " 'in-context learning, and long-term memory, which allows for retaining and '\n",
+      " 'recalling information over extended periods. Short-term memory is finite due '\n",
+      " 'to the context window length of the Transformer model, while long-term '\n",
+      " 'memory involves an external vector store accessible for fast retrieval. '\n",
+      " 'Sensory memory also plays a role in learning embedding representations for '\n",
+      " 'raw inputs like text and images.')\n"
      ]
     }
    ],
@@ -775,73 +772,6 @@
     "# Final generation\n",
     "pprint(value[\"generation\"])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Project structure created successfully!\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "\n",
-    "def create_project_structure():\n",
-    "    # Base directory\n",
-    "    base_dir = \"adaptive_rag\"\n",
-    "    \n",
-    "    # Define the structure\n",
-    "    structure = {\n",
-    "        \"config\": [\"config.py\"],\n",
-    "        \"data\": [\"urls.py\"],\n",
-    "        \"models\": [\"__init__.py\", \"schemas.py\"],\n",
-    "        \"orchestrator\": [\"__init__.py\", \"graph.py\"],\n",
-    "        \"processors\": [\n",
-    "            \"__init__.py\",\n",
-    "            \"document.py\",\n",
-    "            \"embeddings.py\",\n",
-    "            \"grader.py\",\n",
-    "            \"indexer.py\",\n",
-    "            \"generator.py\",\n",
-    "            \"router.py\"\n",
-    "        ],\n",
-    "        \"utils\": [\"__init__.py\", \"helpers.py\"]\n",
-    "    }\n",
-    "    \n",
-    "    # Create base directory\n",
-    "    os.makedirs(base_dir, exist_ok=True)\n",
-    "    \n",
-    "    # Create root level files\n",
-    "    root_files = [\".env\", \"requirements.txt\", \"main.py\", \"README.md\"]\n",
-    "    for file in root_files:\n",
-    "        open(os.path.join(base_dir, file), 'w').close()\n",
-    "    \n",
-    "    # Create directories and their files\n",
-    "    for directory, files in structure.items():\n",
-    "        dir_path = os.path.join(base_dir, directory)\n",
-    "        os.makedirs(dir_path, exist_ok=True)\n",
-    "        \n",
-    "        # Create files in the directory\n",
-    "        for file in files:\n",
-    "            open(os.path.join(dir_path, file), 'w').close()\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    create_project_structure()\n",
-    "    print(\"Project structure created successfully!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
