--- a/notebooks/multi_agent_researcher.ipynb
+++ b/notebooks/multi_agent_researcher.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,13 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "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\n",
       "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\n"
      ]
     }
@@ -60,7 +61,9 @@
     "organization = os.getenv(\"ORGANIZATION\")\n",
     "tavily_api_key = os.getenv(\"TAVILY_API_KEY\")\n",
     "\n",
+    "print(tavily_api_key)\n",
     "print(api_key)\n",
+    "\n",
     "\n",
     "embed = OpenAIEmbeddings(\n",
     "       api_key=api_key,\n",
@@ -77,13 +80,12 @@
     "\n",
     "### Search\n",
     "import os\n",
-    "os.environ[\"TAVILY_API_KEY\"] = \"\"\n",
     "web_search_tool = TavilySearchResults(k=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
