--- a/notebooks/customer_support_bot.ipynb
+++ b/notebooks/customer_support_bot.ipynb
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1049,7 @@
     "\n",
     "# Haiku is faster and cheaper, but less accurate\n",
     "# llm = ChatAnthropic(model=\"claude-3-haiku-20240307\")\n",
-    "llm = anthropic_llm\n",
+    "# llm = anthropic_llm\n",
     "# You could swap LLMs, though you will likely want to update the prompts when\n",
     "# doing so!\n",
     "# from langchain_openai import ChatOpenAI\n",
