--- a/notebooks/prompt_generator.ipynb
+++ b/notebooks/prompt_generator.ipynb
@@ -274,6 +274,201 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting crawl4ai\n",
+      "  Downloading Crawl4AI-0.4.23-py3-none-any.whl.metadata (30 kB)\n",
+      "Collecting aiosqlite~=0.20 (from crawl4ai)\n",
+      "  Using cached aiosqlite-0.20.0-py3-none-any.whl.metadata (4.3 kB)\n",
+      "Requirement already satisfied: lxml~=5.3 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from crawl4ai) (5.3.0)\n",
+      "Collecting litellm>=1.53.1 (from crawl4ai)\n",
+      "  Downloading litellm-1.56.4-py3-none-any.whl.metadata (36 kB)\n",
+      "Requirement already satisfied: numpy<3,>=1.26.0 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from crawl4ai) (1.26.4)\n",
+      "Collecting pillow~=10.4 (from crawl4ai)\n",
+      "  Using cached pillow-10.4.0-cp310-cp310-win_amd64.whl.metadata (9.3 kB)\n",
+      "Collecting playwright>=1.49.0 (from crawl4ai)\n",
+      "  Downloading playwright-1.49.1-py3-none-win_amd64.whl.metadata (3.5 kB)\n",
+      "Requirement already satisfied: python-dotenv~=1.0 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from crawl4ai) (1.0.1)\n",
+      "Requirement already satisfied: requests~=2.26 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from crawl4ai) (2.32.3)\n",
+      "Requirement already satisfied: beautifulsoup4~=4.12 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from crawl4ai) (4.12.3)\n",
+      "Collecting tf-playwright-stealth>=1.1.0 (from crawl4ai)\n",
+      "  Downloading tf_playwright_stealth-1.1.0-py3-none-any.whl.metadata (2.6 kB)\n",
+      "Requirement already satisfied: xxhash~=3.4 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from crawl4ai) (3.5.0)\n",
+      "Collecting rank-bm25~=0.2 (from crawl4ai)\n",
+      "  Downloading rank_bm25-0.2.2-py3-none-any.whl.metadata (3.2 kB)\n",
+      "Collecting aiofiles>=24.1.0 (from crawl4ai)\n",
+      "  Downloading aiofiles-24.1.0-py3-none-any.whl.metadata (10 kB)\n",
+      "Requirement already satisfied: colorama~=0.4 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from crawl4ai) (0.4.6)\n",
+      "Collecting snowballstemmer~=2.2 (from crawl4ai)\n",
+      "  Downloading snowballstemmer-2.2.0-py2.py3-none-any.whl.metadata (6.5 kB)\n",
+      "Requirement already satisfied: pydantic>=2.10 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from crawl4ai) (2.10.1)\n",
+      "Requirement already satisfied: typing_extensions>=4.0 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from aiosqlite~=0.20->crawl4ai) (4.12.2)\n",
+      "Requirement already satisfied: soupsieve>1.2 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from beautifulsoup4~=4.12->crawl4ai) (2.6)\n",
+      "Requirement already satisfied: aiohttp in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from litellm>=1.53.1->crawl4ai) (3.10.11)\n",
+      "Requirement already satisfied: click in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from litellm>=1.53.1->crawl4ai) (8.1.7)\n",
+      "Requirement already satisfied: httpx<0.28.0,>=0.23.0 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from litellm>=1.53.1->crawl4ai) (0.27.2)\n",
+      "Requirement already satisfied: importlib-metadata>=6.8.0 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from litellm>=1.53.1->crawl4ai) (6.11.0)\n",
+      "Requirement already satisfied: jinja2<4.0.0,>=3.1.2 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from litellm>=1.53.1->crawl4ai) (3.1.4)\n",
+      "Requirement already satisfied: jsonschema<5.0.0,>=4.22.0 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from litellm>=1.53.1->crawl4ai) (4.23.0)\n",
+      "Requirement already satisfied: openai>=1.55.3 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from litellm>=1.53.1->crawl4ai) (1.57.4)\n",
+      "Requirement already satisfied: tiktoken>=0.7.0 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from litellm>=1.53.1->crawl4ai) (0.8.0)\n",
+      "Requirement already satisfied: tokenizers in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from litellm>=1.53.1->crawl4ai) (0.20.3)\n",
+      "Requirement already satisfied: greenlet==3.1.1 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from playwright>=1.49.0->crawl4ai) (3.1.1)\n",
+      "Collecting pyee==12.0.0 (from playwright>=1.49.0->crawl4ai)\n",
+      "  Using cached pyee-12.0.0-py3-none-any.whl.metadata (2.8 kB)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from pydantic>=2.10->crawl4ai) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.27.1 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from pydantic>=2.10->crawl4ai) (2.27.1)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from requests~=2.26->crawl4ai) (3.4.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from requests~=2.26->crawl4ai) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from requests~=2.26->crawl4ai) (2.2.3)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from requests~=2.26->crawl4ai) (2024.8.30)\n",
+      "Collecting fake-http-header<0.4.0,>=0.3.5 (from tf-playwright-stealth>=1.1.0->crawl4ai)\n",
+      "  Downloading fake_http_header-0.3.5-py3-none-any.whl.metadata (3.5 kB)\n",
+      "Collecting pytest-mockito<0.0.5,>=0.0.4 (from tf-playwright-stealth>=1.1.0->crawl4ai)\n",
+      "  Downloading pytest-mockito-0.0.4.tar.gz (3.0 kB)\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'done'\n",
+      "Requirement already satisfied: anyio in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from httpx<0.28.0,>=0.23.0->litellm>=1.53.1->crawl4ai) (4.6.2.post1)\n",
+      "Requirement already satisfied: httpcore==1.* in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from httpx<0.28.0,>=0.23.0->litellm>=1.53.1->crawl4ai) (1.0.7)\n",
+      "Requirement already satisfied: sniffio in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from httpx<0.28.0,>=0.23.0->litellm>=1.53.1->crawl4ai) (1.3.1)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from httpcore==1.*->httpx<0.28.0,>=0.23.0->litellm>=1.53.1->crawl4ai) (0.14.0)\n",
+      "Requirement already satisfied: zipp>=0.5 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from importlib-metadata>=6.8.0->litellm>=1.53.1->crawl4ai) (3.21.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from jinja2<4.0.0,>=3.1.2->litellm>=1.53.1->crawl4ai) (3.0.2)\n",
+      "Requirement already satisfied: attrs>=22.2.0 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from jsonschema<5.0.0,>=4.22.0->litellm>=1.53.1->crawl4ai) (23.2.0)\n",
+      "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from jsonschema<5.0.0,>=4.22.0->litellm>=1.53.1->crawl4ai) (2024.10.1)\n",
+      "Requirement already satisfied: referencing>=0.28.4 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from jsonschema<5.0.0,>=4.22.0->litellm>=1.53.1->crawl4ai) (0.35.1)\n",
+      "Requirement already satisfied: rpds-py>=0.7.1 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from jsonschema<5.0.0,>=4.22.0->litellm>=1.53.1->crawl4ai) (0.21.0)\n",
+      "Requirement already satisfied: distro<2,>=1.7.0 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from openai>=1.55.3->litellm>=1.53.1->crawl4ai) (1.9.0)\n",
+      "Requirement already satisfied: jiter<1,>=0.4.0 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from openai>=1.55.3->litellm>=1.53.1->crawl4ai) (0.8.2)\n",
+      "Requirement already satisfied: tqdm>4 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from openai>=1.55.3->litellm>=1.53.1->crawl4ai) (4.67.1)\n",
+      "Collecting pytest>=3 (from pytest-mockito<0.0.5,>=0.0.4->tf-playwright-stealth>=1.1.0->crawl4ai)\n",
+      "  Downloading pytest-8.3.4-py3-none-any.whl.metadata (7.5 kB)\n",
+      "Collecting mockito>=1.0.6 (from pytest-mockito<0.0.5,>=0.0.4->tf-playwright-stealth>=1.1.0->crawl4ai)\n",
+      "  Downloading mockito-1.5.3-py3-none-any.whl.metadata (1.5 kB)\n",
+      "Requirement already satisfied: regex>=2022.1.18 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from tiktoken>=0.7.0->litellm>=1.53.1->crawl4ai) (2024.11.6)\n",
+      "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from aiohttp->litellm>=1.53.1->crawl4ai) (2.4.3)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from aiohttp->litellm>=1.53.1->crawl4ai) (1.3.1)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from aiohttp->litellm>=1.53.1->crawl4ai) (1.5.0)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from aiohttp->litellm>=1.53.1->crawl4ai) (6.1.0)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.12.0 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from aiohttp->litellm>=1.53.1->crawl4ai) (1.18.0)\n",
+      "Requirement already satisfied: async-timeout<6.0,>=4.0 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from aiohttp->litellm>=1.53.1->crawl4ai) (4.0.3)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.16.4 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from tokenizers->litellm>=1.53.1->crawl4ai) (0.26.2)\n",
+      "Requirement already satisfied: exceptiongroup>=1.0.2 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from anyio->httpx<0.28.0,>=0.23.0->litellm>=1.53.1->crawl4ai) (1.2.2)\n",
+      "Requirement already satisfied: filelock in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from huggingface-hub<1.0,>=0.16.4->tokenizers->litellm>=1.53.1->crawl4ai) (3.16.1)\n",
+      "Requirement already satisfied: fsspec>=2023.5.0 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from huggingface-hub<1.0,>=0.16.4->tokenizers->litellm>=1.53.1->crawl4ai) (2024.9.0)\n",
+      "Requirement already satisfied: packaging>=20.9 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from huggingface-hub<1.0,>=0.16.4->tokenizers->litellm>=1.53.1->crawl4ai) (24.2)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from huggingface-hub<1.0,>=0.16.4->tokenizers->litellm>=1.53.1->crawl4ai) (6.0.2)\n",
+      "Collecting iniconfig (from pytest>=3->pytest-mockito<0.0.5,>=0.0.4->tf-playwright-stealth>=1.1.0->crawl4ai)\n",
+      "  Downloading iniconfig-2.0.0-py3-none-any.whl.metadata (2.6 kB)\n",
+      "Requirement already satisfied: pluggy<2,>=1.5 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from pytest>=3->pytest-mockito<0.0.5,>=0.0.4->tf-playwright-stealth>=1.1.0->crawl4ai) (1.5.0)\n",
+      "Requirement already satisfied: tomli>=1 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from pytest>=3->pytest-mockito<0.0.5,>=0.0.4->tf-playwright-stealth>=1.1.0->crawl4ai) (2.1.0)\n",
+      "Requirement already satisfied: propcache>=0.2.0 in c:\\personal_git_repo\\.cvenv\\lib\\site-packages (from yarl<2.0,>=1.12.0->aiohttp->litellm>=1.53.1->crawl4ai) (0.2.0)\n",
+      "Downloading Crawl4AI-0.4.23-py3-none-any.whl (140 kB)\n",
+      "Downloading aiofiles-24.1.0-py3-none-any.whl (15 kB)\n",
+      "Using cached aiosqlite-0.20.0-py3-none-any.whl (15 kB)\n",
+      "Downloading litellm-1.56.4-py3-none-any.whl (6.6 MB)\n",
+      "   ---------------------------------------- 0.0/6.6 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.0/6.6 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.0/6.6 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.0/6.6 MB ? eta -:--:--\n",
+      "   - -------------------------------------- 0.3/6.6 MB ? eta -:--:--\n",
+      "   - -------------------------------------- 0.3/6.6 MB ? eta -:--:--\n",
+      "   --- ------------------------------------ 0.5/6.6 MB 599.9 kB/s eta 0:00:11\n",
+      "   --- ------------------------------------ 0.5/6.6 MB 599.9 kB/s eta 0:00:11\n",
+      "   ---- ----------------------------------- 0.8/6.6 MB 657.8 kB/s eta 0:00:09\n",
+      "   ------ --------------------------------- 1.0/6.6 MB 719.5 kB/s eta 0:00:08\n",
+      "   ------ --------------------------------- 1.0/6.6 MB 719.5 kB/s eta 0:00:08\n",
+      "   ------- -------------------------------- 1.3/6.6 MB 771.6 kB/s eta 0:00:07\n",
+      "   --------- ------------------------------ 1.6/6.6 MB 830.6 kB/s eta 0:00:07\n",
+      "   ------------ --------------------------- 2.1/6.6 MB 947.3 kB/s eta 0:00:05\n",
+      "   -------------- ------------------------- 2.4/6.6 MB 1.0 MB/s eta 0:00:05\n",
+      "   ----------------- ---------------------- 2.9/6.6 MB 1.1 MB/s eta 0:00:04\n",
+      "   ------------------- -------------------- 3.1/6.6 MB 1.1 MB/s eta 0:00:04\n",
+      "   ---------------------- ----------------- 3.7/6.6 MB 1.2 MB/s eta 0:00:03\n",
+      "   ------------------------- -------------- 4.2/6.6 MB 1.3 MB/s eta 0:00:02\n",
+      "   ---------------------------- ----------- 4.7/6.6 MB 1.4 MB/s eta 0:00:02\n",
+      "   ------------------------------- -------- 5.2/6.6 MB 1.4 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 5.8/6.6 MB 1.5 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  6.6/6.6 MB 1.6 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 6.6/6.6 MB 1.6 MB/s eta 0:00:00\n",
+      "Using cached pillow-10.4.0-cp310-cp310-win_amd64.whl (2.6 MB)\n",
+      "Downloading playwright-1.49.1-py3-none-win_amd64.whl (34.1 MB)\n",
+      "   ---------------------------------------- 0.0/34.1 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.3/34.1 MB ? eta -:--:--\n",
+      "   - -------------------------------------- 1.3/34.1 MB 3.2 MB/s eta 0:00:11\n",
+      "   -- ------------------------------------- 1.8/34.1 MB 3.0 MB/s eta 0:00:11\n",
+      "   --- ------------------------------------ 2.6/34.1 MB 3.0 MB/s eta 0:00:11\n",
+      "   ---- ----------------------------------- 3.7/34.1 MB 3.6 MB/s eta 0:00:09\n",
+      "   ---- ----------------------------------- 4.2/34.1 MB 3.4 MB/s eta 0:00:09\n",
+      "   ------ --------------------------------- 5.8/34.1 MB 3.9 MB/s eta 0:00:08\n",
+      "   -------- ------------------------------- 6.8/34.1 MB 4.1 MB/s eta 0:00:07\n",
+      "   --------- ------------------------------ 8.1/34.1 MB 4.3 MB/s eta 0:00:07\n",
+      "   ---------- ----------------------------- 8.7/34.1 MB 4.4 MB/s eta 0:00:06\n",
+      "   ------------- -------------------------- 11.5/34.1 MB 4.9 MB/s eta 0:00:05\n",
+      "   -------------- ------------------------- 12.6/34.1 MB 5.0 MB/s eta 0:00:05\n",
+      "   ---------------- ----------------------- 14.2/34.1 MB 5.3 MB/s eta 0:00:04\n",
+      "   ------------------ --------------------- 15.7/34.1 MB 5.5 MB/s eta 0:00:04\n",
+      "   -------------------- ------------------- 17.0/34.1 MB 5.5 MB/s eta 0:00:04\n",
+      "   --------------------- ------------------ 18.1/34.1 MB 5.6 MB/s eta 0:00:03\n",
+      "   ------------------------ --------------- 20.4/34.1 MB 5.6 MB/s eta 0:00:03\n",
+      "   ------------------------- -------------- 22.0/34.1 MB 5.8 MB/s eta 0:00:03\n",
+      "   --------------------------- ------------ 23.1/34.1 MB 5.7 MB/s eta 0:00:02\n",
+      "   ---------------------------- ----------- 24.1/34.1 MB 5.7 MB/s eta 0:00:02\n",
+      "   ----------------------------- ---------- 25.4/34.1 MB 5.8 MB/s eta 0:00:02\n",
+      "   ------------------------------- -------- 26.5/34.1 MB 5.7 MB/s eta 0:00:02\n",
+      "   -------------------------------- ------- 28.0/34.1 MB 5.7 MB/s eta 0:00:02\n",
+      "   --------------------------------- ------ 28.6/34.1 MB 5.7 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 28.6/34.1 MB 5.7 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 29.9/34.1 MB 5.4 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 30.9/34.1 MB 5.3 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 32.5/34.1 MB 5.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  33.6/34.1 MB 5.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 34.1/34.1 MB 5.3 MB/s eta 0:00:00\n",
+      "Using cached pyee-12.0.0-py3-none-any.whl (14 kB)\n",
+      "Downloading rank_bm25-0.2.2-py3-none-any.whl (8.6 kB)\n",
+      "Downloading snowballstemmer-2.2.0-py2.py3-none-any.whl (93 kB)\n",
+      "Downloading tf_playwright_stealth-1.1.0-py3-none-any.whl (33 kB)\n",
+      "Downloading fake_http_header-0.3.5-py3-none-any.whl (14 kB)\n",
+      "Downloading mockito-1.5.3-py3-none-any.whl (30 kB)\n",
+      "Downloading pytest-8.3.4-py3-none-any.whl (343 kB)\n",
+      "Downloading iniconfig-2.0.0-py3-none-any.whl (5.9 kB)\n",
+      "Building wheels for collected packages: pytest-mockito\n",
+      "  Building wheel for pytest-mockito (setup.py): started\n",
+      "  Building wheel for pytest-mockito (setup.py): finished with status 'done'\n",
+      "  Created wheel for pytest-mockito: filename=pytest_mockito-0.0.4-py3-none-any.whl size=3717 sha256=8f3c798e9f7ce33137d010013b1705d0b295842b5354074238d7ad5689b9c7c1\n",
+      "  Stored in directory: c:\\users\\asua\\appdata\\local\\pip\\cache\\wheels\\df\\72\\3d\\ad383ec25e3ebb14d12326426166bee101969601f5d35d5462\n",
+      "Successfully built pytest-mockito\n",
+      "Installing collected packages: snowballstemmer, rank-bm25, pyee, pillow, mockito, iniconfig, fake-http-header, aiosqlite, aiofiles, pytest, playwright, pytest-mockito, tf-playwright-stealth, litellm, crawl4ai\n",
+      "  Attempting uninstall: pillow\n",
+      "    Found existing installation: pillow 11.0.0\n",
+      "    Uninstalling pillow-11.0.0:\n",
+      "      Successfully uninstalled pillow-11.0.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  WARNING: Failed to remove contents in a temporary directory 'C:\\Personal_Git_Repo\\.cvenv\\Lib\\site-packages\\~il'.\n",
+      "  You can safely remove it manually.\n",
+      "ERROR: Could not install packages due to an OSError: [WinError 5] Access is denied: 'c:\\\\Personal_Git_Repo\\\\.cvenv\\\\Lib\\\\site-packages\\\\litellm-1.56.4.dist-info\\\\RECORD8xqi8294.tmp' -> 'c:\\\\Personal_Git_Repo\\\\.cvenv\\\\Lib\\\\site-packages\\\\litellm-1.56.4.dist-info\\\\RECORD'\n",
+      "Check the permissions.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install crawl4ai"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
