--- a/notebooks/multi_agent_researcher.ipynb
+++ b/notebooks/multi_agent_researcher.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,8 +128,7 @@
     "    return (\n",
     "        \"You are a helpful AI assistant, collaborating with other assistants.\"\n",
     "        \" Use the provided tools to progress towards answering the question.\"\n",
-    "        \" If you are unable to fully answer, that's OK, another assistant with different tools \"\n",
-    "        \" will help where you left off. Execute what you can to make progress.\"\n",
+    "        \" If you are unable to fully answer, that's OK, another assistant with different toolswill help where you left off. Execute what you can to make progress.\"\n",
     "        \" If you or any of the other assistants have the final answer or deliverable,\"\n",
     "        \" prefix your response with FINAL ANSWER so the team knows to stop.\"\n",
     "        f\"\\n{suffix}\"\n",
