updated code IQVIA
updated code IQVIA

--- a/iqvia_exp.ipynb
+++ b/iqvia_exp.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "92a02268",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
     "# genai.configure(api_key=os.getenv(\"GEMINI_API_KEY\")) # Loads API key\n",
     "\n",
     "# Initialize Google Generative AI\n",
-    "llm = ChatGoogleGenerativeAI(model=\"gemini-1.5-flash\", api_key=\"AIzaSyC8R-EfvfAMKItpj7isfvgBUmRZFSeLu90\")\n",
+    "llm = ChatGoogleGenerativeAI(model=\"gemini-1.5-flash\")\n",
     "\n",
     "# Initialize Tavily Search\n",
     "tavily_tool = TavilySearchResults(api_key=os.getenv(\"TAVILY_API_KEY\"))"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f0069239",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
     "        print(f\"attributes of first doc: {vars(texts[0])}\") # To help determine the correct attribute name\n",
     "    \n",
     "    # Create embeddings using a Google Generative AI model\n",
-    "    embeddings = GoogleGenerativeAIEmbeddings(model=\"models/gemini-embedding-exp-03-07\", google_api_key=\"AIzaSyC8R-EfvfAMKItpj7isfvgBUmRZFSeLu90\") # TODO added models/\n",
+    "    embeddings = GoogleGenerativeAIEmbeddings(model=\"models/gemini-embedding-exp-03-07\") # TODO added models/\n",
     "    \n",
     "    # print(embeddings)\n",
     "    \n",
